tests/fail/elaboration/unification/mismatch/fun-app-input-record-type.fathom
//~ exit-code = 1

{ x : Type } x y
